# rdma-core

./: CMakeLists.txt  hosts  hosts.real  run-ns.mk  run.mk  test.sh
kernel-headers/: CMakeLists.txt
kernel-headers/rdma/: ib_user_ioctl_verbs.h  nex-abi.h
libibverbs/: all_providers.c  dynamic_driver.c  verbs.c
libibverbs/examples/: rc_pingpong.c
providers/nex/: CMakeLists.txt  README.md  build_nex.sh  nex.c  nex.h  nex_shm.c  nex_shm.h  test_nex.c
providers/nex.bkp/: CMakeLists.txt  build_nex.sh  nex-abi.h  nex.c  nex.h  test_nex.c
providers/nex/cm/: nex_cm.c  nex_cm.h  nex_cm_srv.c  nex_cmd.h
providers/nex/kernel/: .Module.symvers.cmd  .modules.order.cmd  .nex_kernel.ko.cmd  .nex_kernel.mod.cmd  .nex_kernel.mod.o.cmd  .nex_kernel.o.cmd  .nex_kernel.o.d  Makefile  Module.symvers  modules.order  nex_kernel.c  nex_kernel.ko  nex_kernel.mod  nex_kernel.mod.c
